<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.main</groupId>
    <artifactId>bertinibot</artifactId>
    <version>2.0.0</version>
    <packaging>jar</packaging>

    <name>bertinibot-v2</name>
    <description>Discord music bot built on JDA 6 (DAVE/E2EE) and Lavaplayer 2 (embedded, no yt-dlp).</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <jda.version>6.4.2</jda.version>
        <libdave.version>ce725965e</libdave.version>
        <lavaplayer.version>2.2.6</lavaplayer.version>
        <youtube.source.version>1.13.4</youtube.source.version>
        <slf4j.version>2.0.16</slf4j.version>
        <logback.version>1.5.16</logback.version>
        <jsoup.version>1.18.3</jsoup.version>
        <json.version>20240303</json.version>
        <junit.version>5.11.4</junit.version>

        <main.class>com.main.Bootstrap</main.class>
    </properties>

    <repositories>
        <repository>
            <id>maven-central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>lavalink</id>
            <name>Lavalink Maven</name>
            <url>https://maven.lavalink.dev/releases</url>
        </repository>
        <repository>
            <id>lavalink-snapshots</id>
            <name>Lavalink Snapshots</name>
            <url>https://maven.lavalink.dev/snapshots</url>
        </repository>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>${jda.version}</version>
        </dependency>

        <!--
            DAVE / E2EE protocol implementation (required by Discord since
            2026-03-01). JDA 6.x no longer bundles audio natives, so we wire
            libdave-jvm (JNI based, works on Java 21) and include the natives
            for both Windows and Linux x86_64 so the same jar runs locally
            and inside the Docker image.
        -->
        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>adapter-jda</artifactId>
            <version>${libdave.version}</version>
        </dependency>
        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>impl-jni</artifactId>
            <version>${libdave.version}</version>
        </dependency>
        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>natives-win-x86-64</artifactId>
            <version>${libdave.version}</version>
        </dependency>
        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>natives-linux-x86-64</artifactId>
            <version>${libdave.version}</version>
        </dependency>

        <dependency>
            <groupId>dev.arbjerg</groupId>
            <artifactId>lavaplayer</artifactId>
            <version>${lavaplayer.version}</version>
        </dependency>

        <dependency>
            <groupId>dev.lavalink.youtube</groupId>
            <artifactId>v2</artifactId>
            <version>${youtube.source.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${json.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>bertinibot-${project.version}</finalName>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <minimizeJar>false</minimizeJar>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${main.class}</mainClass>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
